--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,5 +8,6 @@
   "trailingComma": "all",
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "requirePragma": false
+  "requirePragma": false,
+  "quoteProps": "consistent"
 }
